--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 02 17:36:18 CET 2026
-sdk.dir=/home/raik/Android/Sdk
+#Tue Feb 03 15:04:22 CET 2026
+sdk.dir=C\:\\Users\\raik\\AppData\\Local\\Android\\Sdk
